--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -99,27 +99,30 @@ body {
   div.st-search {
     height: fit-content;
     min-height: 260px;
-    background-color: #f7f7f7;
+    background-color: #F7F7F7;
     margin: 0px;
+    p.st-important {
+      font-size: 24px;
+      margin: 0 auto;
+      max-width: 1100px;
+      font-weight: 600;
+    }
+    p.st-description {
+      margin: 0 auto;
+      max-width: 1100px;
+      font-size: 14px;
+    }
     div.st-search-content {
       padding: 44px 5px;
       margin: 0px auto;
       width: calc(100% - 10px);
-      border-collapse: separate;
       max-width: 1100px;
-      p.st-important {
-        font-size: 24px;
-        margin: 0px;
-        font-weight: 600;
-      }
-      p.st-description {
-        margin: 0px 0px 10px;
-        font-size: 14px;
-      }
+      
+     
       div.st-location {
         margin-top: 15px;
         position: relative;
-        width: 39%;
+        width: 35%;
         height: 52px;
         float: left;
         min-width: 190px;
@@ -129,7 +132,7 @@ body {
           width: calc(100% - 60px);
           height: 100%;
           padding-left: 60px;
-          border: 4px solid $yellow;
+          border: 4px solid #FEBB02;
           font-size: 14px;
         }
         i {
@@ -143,7 +146,7 @@ body {
       div.st-date {
         margin-top: 15px;
         position: relative;
-        width: 24%;
+        width: 28%;
         height: 52px;
         float: left;
         min-width: 235px;
@@ -151,10 +154,11 @@ body {
         margin-bottom: 10px;
 
         input {
-          width: calc(100% - 60px);
+          width: calc(100% - 75px);
           height: 100%;
           padding-left: 60px;
-          border: 4px solid $yellow;
+          padding-right:15px;
+          border: 4px solid #FEBB02;
           font-size: 14px;
         }
         i {
@@ -164,6 +168,10 @@ body {
           left: 24px;
           color: $gray;
         }
+      }
+      div.st-low-res-date
+      {
+        display:none;
       }
       div.st-count {
         margin-top: 15px;
@@ -178,8 +186,8 @@ body {
         input {
           width: calc(100% - 60px);
           height: 100%;
-          padding-left: 60px;
-          border: 4px solid $yellow;
+          padding-left:60px;
+          border: 4px solid #FEBB02;
           font-size: 14px;
         }
         i {
@@ -197,7 +205,7 @@ body {
           width: 10%;
           position: relative;
           float: left;
-          border: 4px solid $yellow;
+          border: 4px solid #FEBB02;
           height: 62px;
           font-size: 20px;
           color: white;
@@ -205,6 +213,7 @@ body {
           min-width: 75px;
           overflow: hidden;
         }
+       
       }
       div.st-bussiness {
         float: left;
@@ -522,7 +531,8 @@ body {
       height: 300px;
       grid-gap: 16px;
       float: left;
-      width: 100%;
+      width: calc(100% - 10px);
+      padding:0 5px;
       div.st-type {
         img {
           height: 207px;
@@ -544,15 +554,18 @@ body {
     div.st-private-rooms {
       p.st-title {
         font-size: 24px;
+        padding: 0 5px;
+        width:calc(100% - 10px);
       }
       div.st-offers {
         max-width: 1100px;
-        width: 100%;
+        width: calc(100% - 10px);
         height: 356px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         position: relative;
         grid-gap: 16px;
+        padding:0 5px;
         div {
           position: relative;
           min-width: 0;
@@ -622,12 +635,16 @@ body {
     }
   }
   div.st-register {
-    width: calc(100% - 2px);
+    width: calc(100% - 12px);
     max-width: 1100px;
     margin: 24px auto 32px;
     border: 1px solid $border-gray;
     position: relative;
     height: 164px;
+    @include break-point(1100px){
+      margin:24px 5px 32px;
+    }
+    
     img {
       padding: 24px;
       float: left;
@@ -744,23 +761,248 @@ body {
       margin: 0px auto;
       width: 100%;
       td {
-        width:20%;
+        width: 20%;
         span.st-name {
           color: #0077cc;
-          font-size:14px;
+          font-size: 14px;
         }
         span.st-number {
           color: #737373;
-          font-size:13px;
+          font-size: 13px;
         }
       }
     }
   }
-  div.st-discover
-  {
-    font-size:24px;
+  div.st-discover {
+    font-size: 24px;
     font-weight: 700;
     max-width: 1100px;
-    margin: 60px auto;
+    position: relative;
+    margin: 60px auto 16px;
+  }
+  div.st-page-picker {
+    height: 20px;
+    max-width: 1100px;
+    margin: 0px auto;
+    span.st-unselected {
+      float: right;
+      font-size: 13px;
+      padding: 0 7px 2px;
+      background-color: #838383;
+      margin-left: 3px;
+      color: white;
+      font-weight: 400;
+    }
+    span.st-selected {
+      float: right;
+      font-size: 13px;
+      padding: 0 7px 2px;
+      background-color: #0077cc;
+      margin-left: 3px;
+      color: white;
+      font-weight: 400;
+    }
+    span.st-more {
+      float: right;
+      margin-left: 10px;
+      font-size: 13px;
+      text-decoration: underline;
+      color: #0077cc;
+    }
+  }
+  div.st-things-holder {
+    width: 100%;
+    height: fit-content;
+    div.st-things-to-enjoy {
+      display: grid;
+      width: 100%;
+      min-width: 0px;
+      max-width: 1100px;
+      margin: 12px auto;
+      grid-template-columns: repeat(5, 1fr);
+      grid-gap: 14px;
+      position: relative;
+    }
+    div {
+      min-width: 0px;
+      position: relative;
+      img {
+        width: 100%;
+      }
+      p.st-text {
+        background-color: rgba(0, 0, 0, 0.3);
+        position: absolute;
+        width: calc(100% - 30px);
+        font-size: 14px;
+        color: white;
+        top: 0px;
+        margin: 0px;
+        text-align: center;
+        padding: 0 15px;
+        @include text-overflow();
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.3);
+          padding: 0 15px;
+        }
+      }
+      p.st-location-name {
+        font-size: 14px;
+        color: #0077cc;
+        text-align: center;
+        padding: 7px 0;
+        margin: 0 0 50px;
+      }
+    }
+  }
+  div.st-footer-holder {
+    background-color: #001b42;
+    padding: 50px 0px;
+    div.st-footer {
+      color: white;
+      max-width: 1100px;
+      margin: 0px auto;
+      text-align: center;
+      h2.st-title {
+        font-size: 24px;
+        font-weight: 300;
+        margin: 0px;
+        display: block;
+      }
+      p.st-subscribe {
+        font-size: 16px;
+        margin: 0 0 25px;
+      }
+      div.st-subscribe-holder {
+        width: 50%;
+        min-width: 435px;
+        margin: 0px auto;
+        input.st-give-mail {
+          width: 65%;
+          padding: 10px;
+          font-size: 20px;
+          line-height: 20px;
+          border-radius: 5px;
+          border: 0px;
+        }
+        input.st-submit {
+          padding: 14.4px 24px;
+          font-size: 16px;
+          background-color: #0077cc;
+          border: 0px;
+          color: white;
+          line-height: 15px;
+          border-radius: 5px;
+        }
+      }
+      p.st-send-me {
+        margin: 0px;
+        width: 100%;
+      }
+    }
+  }
+  div.st-add-object {
+    width: calc(100% - 20px);
+    padding: 15px 10px;
+    background-color: #003580;
+    border-bottom: 1px solid white;
+    input {
+      color: white;
+      display: block;
+      background-color: #003580;
+      border: 1px solid white;
+      border-radius: 5px;
+      line-height: 28px;
+      padding: 0 15px;
+      font-size: 13px;
+      margin: 0px auto;
+    }
+  }
+  div.st-version-picker {
+    background-color: #003580;
+    width: 100%;
+    height: fit-content;
+    float: left;
+    div.st-navigation {
+      max-width: 1100px;
+      width: 100%;
+      margin: 0px auto;
+      span {
+        display: block;
+        padding: 15px 10px;
+        width: fit-content;
+        float: left;
+        text-decoration: underline;
+        font-size: 13px;
+        color: white;
+        margin: 0 auto;
+        font-weight: 700;
+      }
+    }
+  }
+  div.st-links {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0px auto;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 10px;
+    ul {
+      list-style-type: none;
+      color: #0077cc;
+      font-size: 13px;
+      li {
+        margin-bottom: 10px;
+      }
+    }
+  }
+  p.st-support {
+    width: calc(100% - 16px);
+    max-width: 1100px;
+    margin: 0px auto;
+    border-top: 1px solid #e9f0fa;
+    border-bottom: 1px solid #e9f0fa;
+    padding: 11px 8px;
+    font-size: 12px;
+    span {
+      color: #0077cc;
+      font-weight: 700;
+    }
+  }
+  p.st-ekstranet
+  {
+    text-align: center;
+    margin: 54px 0 0;
+    font-size:14px;
+    font-weight: 700;
+    color:#0077cc;
+  }
+  p.st-copyrights
+  {
+    font-size:10px;
+    max-width: 1100px;
+    text-align:left;
+    margin:40px auto 0;
+  }
+  p.st-about-us
+  {
+    text-align:center;
+    color:#838383;
+    font-size: 12px;
+    margin-top:28px;
+  }
+  div.st-partners
+  {
+    width: calc(100% - 30px);
+    max-width: 1100px;
+    margin: 0px auto;
+    display: grid;
+    padding: 0px 15px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: auto;
+    @include break-point(750px)
+    {
+      
+    grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
