--- a/scss/styles.css
+++ b/scss/styles.css
@@ -3,7 +3,6 @@ body {
   min-width: 400px;
   margin: 0px;
   padding: 0px;
-  padding-bottom: 1000px;
 }
 
 body div.st-header {
@@ -130,8 +129,14 @@ body div.st-search {
   height: -moz-fit-content;
   height: fit-content;
   min-height: 260px;
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
   margin: 0px;
+}
+
+@media (max-width: 1030px) {
+  body div.st-search {
+    height: 410px;
+  }
 }
 
 body div.st-search p.st-important {
@@ -165,11 +170,17 @@ body div.st-search div.st-search-content div.st-location {
   margin-bottom: 10px;
 }
 
+@media (max-width: 1030px) {
+  body div.st-search div.st-search-content div.st-location {
+    width: calc(100% - 5px);
+  }
+}
+
 body div.st-search div.st-search-content div.st-location input {
-  width: calc(100% - 60px);
+  width: calc(100% - 63px);
   height: 100%;
   padding-left: 60px;
-  border: 4px solid #FEBB02;
+  border: 4px solid #febb02;
   font-size: 14px;
 }
 
@@ -192,12 +203,18 @@ body div.st-search div.st-search-content div.st-date {
   margin-bottom: 10px;
 }
 
+@media (max-width: 1030px) {
+  body div.st-search div.st-search-content div.st-date {
+    display: none;
+  }
+}
+
 body div.st-search div.st-search-content div.st-date input {
-  width: calc(100% - 75px);
+  width: calc(100% - 63px);
   height: 100%;
   padding-left: 60px;
   padding-right: 15px;
-  border: 4px solid #FEBB02;
+  border: 4px solid #febb02;
   font-size: 14px;
 }
 
@@ -213,6 +230,37 @@ body div.st-search div.st-search-content div.st-low-res-date {
   display: none;
 }
 
+@media (max-width: 1030px) {
+  body div.st-search div.st-search-content div.st-low-res-date {
+    width: 100%;
+    position: relative;
+    display: block;
+    float: left;
+    width: 100%;
+  }
+  body div.st-search div.st-search-content div.st-low-res-date div {
+    position: relative;
+    width: 50%;
+    float: left;
+  }
+  body div.st-search div.st-search-content div.st-low-res-date input {
+    width: calc(100% - 83px);
+    height: 52px;
+    padding-left: 60px;
+    padding-right: 15px;
+    float: left;
+    border: 4px solid #febb02;
+    font-size: 14px;
+  }
+  body div.st-search div.st-search-content div.st-low-res-date i {
+    position: absolute;
+    top: 18px;
+    font-size: 25px;
+    left: 24px;
+    color: #BDBDBD;
+  }
+}
+
 body div.st-search div.st-search-content div.st-count {
   margin-top: 15px;
   position: relative;
@@ -224,12 +272,24 @@ body div.st-search div.st-search-content div.st-count {
   margin-bottom: 10px;
 }
 
+@media (max-width: 1030px) {
+  body div.st-search div.st-search-content div.st-count {
+    width: 100%;
+  }
+}
+
 body div.st-search div.st-search-content div.st-count input {
   width: calc(100% - 60px);
   height: 100%;
   padding-left: 60px;
-  border: 4px solid #FEBB02;
+  border: 4px solid #febb02;
   font-size: 14px;
+}
+
+@media (max-width: 1030px) {
+  body div.st-search div.st-search-content div.st-count input {
+    width: calc(100% - 68px);
+  }
 }
 
 body div.st-search div.st-search-content div.st-count i {
@@ -249,13 +309,19 @@ body div.st-search div.st-search-content div.st-search-btn input.st-input {
   width: 10%;
   position: relative;
   float: left;
-  border: 4px solid #FEBB02;
+  border: 4px solid #febb02;
   height: 62px;
   font-size: 20px;
   color: white;
   background-color: #006bb8;
   min-width: 75px;
   overflow: hidden;
+}
+
+@media (max-width: 1030px) {
+  body div.st-search div.st-search-content div.st-search-btn input.st-input {
+    width: 100%;
+  }
 }
 
 body div.st-search div.st-search-content div.st-bussiness {
