--- a/scss/styles.css
+++ b/scss/styles.css
@@ -712,6 +712,31 @@ body div.st-accommodation div.st-sorts {
   padding: 0 5px;
 }
 
+body div.st-accommodation div.st-sorts div.st-apartments {
+  background-image: url(/img/apartments.png);
+}
+
+body div.st-accommodation div.st-sorts div.st-resorts {
+  background-image: url(/img/resorts.png);
+}
+
+body div.st-accommodation div.st-sorts div.st-villas {
+  background-image: url(/img/villas.png);
+}
+
+body div.st-accommodation div.st-sorts div.st-cabins {
+  background-image: url(/img/cabins.png);
+}
+
+body div.st-accommodation div.st-sorts div.st-cottages {
+  background-image: url(/img/cottages.jpg);
+}
+
+body div.st-accommodation div.st-sorts div.st-type {
+  background-repeat: no-repeat;
+  background-size: auto 205px;
+}
+
 body div.st-accommodation div.st-sorts div.st-type img {
   height: 207px;
   width: 100%;
@@ -721,7 +746,7 @@ body div.st-accommodation div.st-sorts div.st-type img {
 body div.st-accommodation div.st-sorts div.st-type p.st-type {
   font-size: 16px;
   font-weight: 700;
-  margin: 16px 0 0;
+  margin: 221px 0 0;
 }
 
 body div.st-accommodation div.st-sorts div.st-type p.st-ammount {
@@ -847,6 +872,7 @@ body div.st-register {
   border: 1px solid #e0e0e0;
   position: relative;
   height: 164px;
+  min-width: 595px;
 }
 
 @media (max-width: 1100px) {
