--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,8 +1,8 @@
 body {
-  font-family: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   min-width: 400px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0 0 40px;
 }
 
 body div.st-header {
