--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,10 +3,10 @@
 
 body 
 {
-  font-family: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  font-family:Helvetica, Arial, sans-serif;
   min-width: 400px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0 0 40px;
   div.st-header 
   {
     background-color: $blue;
